--- a/client/styles/gameCard.css
+++ b/client/styles/gameCard.css
@@ -885,4 +885,8 @@
   right: 0;
   top: 0;
 }
+
+.endTask {
+  background-image: url("../img/minus.svg");
+}
 /*# sourceMappingURL=gameCard.css.map */
