added: more characters and minions. Mournbalde is latest.

--- a/client/styles/gameEffects.css
+++ b/client/styles/gameEffects.css
@@ -300,7 +300,7 @@
   }
 }
 
-[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow="newSpewWhite"] {
+[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow="newSpewWhite"], [data-glow="graspingDead"] {
   animation: 30s infinite alternate glowwhite;
 }
 
@@ -335,6 +335,25 @@
   }
   100% {
     box-shadow: 0 0 0.5vw 0.48vw #98f165, 0 0 0.5vw 0.4vw inset #98f165;
+  }
+}
+
+[data-glow="deathMove"] {
+  animation: 30s infinite alternate glowblack;
+}
+
+@keyframes glowblack {
+  0% {
+    box-shadow: 0 0 0.5vw 0.4vw #1d1c1c, 0 0 0.5vw 0.4vw inset #1d1c1c;
+  }
+  33% {
+    box-shadow: 0 0 0.5vw 0.42vw #242020, 0 0 0.5vw 0.4vw inset #242020;
+  }
+  66% {
+    box-shadow: 0 0 0.5vw 0.44vw #310606, 0 0 0.5vw 0.4vw inset #310606;
+  }
+  100% {
+    box-shadow: 0 0 0.5vw 0.48vw #292727, 0 0 0.5vw 0.4vw inset #292727;
   }
 }
 
@@ -396,8 +415,12 @@
   animation: reverse 1s deathGrip;
 }
 
-.illKillYouAll, .outflank {
+.illKillYouAll, .outflank, .marchGuardBlack, .marchGuardWhite {
   filter: invert(18%) saturate(141);
+}
+
+.mournblade_raisins {
+  filter: drop-shadow(0 0 2vh #48ff00) grayscale(53%) !important;
 }
 
 #multi_choice_info_panel {
@@ -434,252 +457,252 @@
 }
 
 .particle:nth-of-type(1) {
-  animation-delay: 0.91909s;
+  animation-delay: 0.83211s;
   left: calc((100% - 5em) * 0);
 }
 
 .particle:nth-of-type(2) {
-  animation-delay: 0.26423s;
+  animation-delay: 0.84733s;
   left: calc((100% - 5em) * 0.02);
 }
 
 .particle:nth-of-type(3) {
-  animation-delay: 0.62429s;
+  animation-delay: 0.09564s;
   left: calc((100% - 5em) * 0.04);
 }
 
 .particle:nth-of-type(4) {
-  animation-delay: 0.74151s;
+  animation-delay: 0.0313s;
   left: calc((100% - 5em) * 0.06);
 }
 
 .particle:nth-of-type(5) {
-  animation-delay: 0.7421s;
+  animation-delay: 0.40771s;
   left: calc((100% - 5em) * 0.08);
 }
 
 .particle:nth-of-type(6) {
-  animation-delay: 0.73629s;
+  animation-delay: 0.51302s;
   left: calc((100% - 5em) * 0.1);
 }
 
 .particle:nth-of-type(7) {
-  animation-delay: 0.14623s;
+  animation-delay: 0.43113s;
   left: calc((100% - 5em) * 0.12);
 }
 
 .particle:nth-of-type(8) {
-  animation-delay: 0.33592s;
+  animation-delay: 0.00881s;
   left: calc((100% - 5em) * 0.14);
 }
 
 .particle:nth-of-type(9) {
-  animation-delay: 0.22926s;
+  animation-delay: 0.45331s;
   left: calc((100% - 5em) * 0.16);
 }
 
 .particle:nth-of-type(10) {
-  animation-delay: 0.66767s;
+  animation-delay: 0.51289s;
   left: calc((100% - 5em) * 0.18);
 }
 
 .particle:nth-of-type(11) {
-  animation-delay: 0.87967s;
+  animation-delay: 0.04856s;
   left: calc((100% - 5em) * 0.2);
 }
 
 .particle:nth-of-type(12) {
-  animation-delay: 0.67352s;
+  animation-delay: 0.84577s;
   left: calc((100% - 5em) * 0.22);
 }
 
 .particle:nth-of-type(13) {
-  animation-delay: 0.24827s;
+  animation-delay: 0.32654s;
   left: calc((100% - 5em) * 0.24);
 }
 
 .particle:nth-of-type(14) {
-  animation-delay: 0.19403s;
+  animation-delay: 0.44509s;
   left: calc((100% - 5em) * 0.26);
 }
 
 .particle:nth-of-type(15) {
-  animation-delay: 0.52774s;
+  animation-delay: 0.55187s;
   left: calc((100% - 5em) * 0.28);
 }
 
 .particle:nth-of-type(16) {
-  animation-delay: 0.33621s;
+  animation-delay: 0.47148s;
   left: calc((100% - 5em) * 0.3);
 }
 
 .particle:nth-of-type(17) {
-  animation-delay: 0.10644s;
+  animation-delay: 0.75683s;
   left: calc((100% - 5em) * 0.32);
 }
 
 .particle:nth-of-type(18) {
-  animation-delay: 0.20701s;
+  animation-delay: 0.52875s;
   left: calc((100% - 5em) * 0.34);
 }
 
 .particle:nth-of-type(19) {
-  animation-delay: 0.66882s;
+  animation-delay: 0.02261s;
   left: calc((100% - 5em) * 0.36);
 }
 
 .particle:nth-of-type(20) {
-  animation-delay: 0.39559s;
+  animation-delay: 0.29407s;
   left: calc((100% - 5em) * 0.38);
 }
 
 .particle:nth-of-type(21) {
-  animation-delay: 0.53998s;
+  animation-delay: 0.52411s;
   left: calc((100% - 5em) * 0.4);
 }
 
 .particle:nth-of-type(22) {
-  animation-delay: 0.4182s;
+  animation-delay: 0.84364s;
   left: calc((100% - 5em) * 0.42);
 }
 
 .particle:nth-of-type(23) {
-  animation-delay: 0.67463s;
+  animation-delay: 0.41901s;
   left: calc((100% - 5em) * 0.44);
 }
 
 .particle:nth-of-type(24) {
-  animation-delay: 0.30275s;
+  animation-delay: 0.51195s;
   left: calc((100% - 5em) * 0.46);
 }
 
 .particle:nth-of-type(25) {
-  animation-delay: 0.01455s;
+  animation-delay: 0.3733s;
   left: calc((100% - 5em) * 0.48);
 }
 
 .particle:nth-of-type(26) {
-  animation-delay: 0.92166s;
+  animation-delay: 0.53786s;
   left: calc((100% - 5em) * 0.5);
 }
 
 .particle:nth-of-type(27) {
-  animation-delay: 0.88151s;
+  animation-delay: 0.75228s;
   left: calc((100% - 5em) * 0.52);
 }
 
 .particle:nth-of-type(28) {
-  animation-delay: 0.00096s;
+  animation-delay: 0.45932s;
   left: calc((100% - 5em) * 0.54);
 }
 
 .particle:nth-of-type(29) {
-  animation-delay: 0.04356s;
+  animation-delay: 0.38543s;
   left: calc((100% - 5em) * 0.56);
 }
 
 .particle:nth-of-type(30) {
-  animation-delay: 0.58534s;
+  animation-delay: 0.04214s;
   left: calc((100% - 5em) * 0.58);
 }
 
 .particle:nth-of-type(31) {
-  animation-delay: 0.75046s;
+  animation-delay: 0.25066s;
   left: calc((100% - 5em) * 0.6);
 }
 
 .particle:nth-of-type(32) {
-  animation-delay: 0.20659s;
+  animation-delay: 0.34985s;
   left: calc((100% - 5em) * 0.62);
 }
 
 .particle:nth-of-type(33) {
-  animation-delay: 0.75058s;
+  animation-delay: 0.55336s;
   left: calc((100% - 5em) * 0.64);
 }
 
 .particle:nth-of-type(34) {
-  animation-delay: 0.36151s;
+  animation-delay: 0.582s;
   left: calc((100% - 5em) * 0.66);
 }
 
 .particle:nth-of-type(35) {
-  animation-delay: 0.85191s;
+  animation-delay: 0.04347s;
   left: calc((100% - 5em) * 0.68);
 }
 
 .particle:nth-of-type(36) {
-  animation-delay: 0.25488s;
+  animation-delay: 0.57252s;
   left: calc((100% - 5em) * 0.7);
 }
 
 .particle:nth-of-type(37) {
-  animation-delay: 0.08463s;
+  animation-delay: 0.62492s;
   left: calc((100% - 5em) * 0.72);
 }
 
 .particle:nth-of-type(38) {
-  animation-delay: 0.08539s;
+  animation-delay: 0.19751s;
   left: calc((100% - 5em) * 0.74);
 }
 
 .particle:nth-of-type(39) {
-  animation-delay: 0.86067s;
+  animation-delay: 0.87984s;
   left: calc((100% - 5em) * 0.76);
 }
 
 .particle:nth-of-type(40) {
-  animation-delay: 0.7758s;
+  animation-delay: 0.6704s;
   left: calc((100% - 5em) * 0.78);
 }
 
 .particle:nth-of-type(41) {
-  animation-delay: 0.17037s;
+  animation-delay: 0.4962s;
   left: calc((100% - 5em) * 0.8);
 }
 
 .particle:nth-of-type(42) {
-  animation-delay: 0.36985s;
+  animation-delay: 0.821s;
   left: calc((100% - 5em) * 0.82);
 }
 
 .particle:nth-of-type(43) {
-  animation-delay: 0.29736s;
+  animation-delay: 0.96665s;
   left: calc((100% - 5em) * 0.84);
 }
 
 .particle:nth-of-type(44) {
-  animation-delay: 0.00063s;
+  animation-delay: 0.77464s;
   left: calc((100% - 5em) * 0.86);
 }
 
 .particle:nth-of-type(45) {
-  animation-delay: 0.37706s;
+  animation-delay: 0.35189s;
   left: calc((100% - 5em) * 0.88);
 }
 
 .particle:nth-of-type(46) {
-  animation-delay: 0.46148s;
+  animation-delay: 0.4655s;
   left: calc((100% - 5em) * 0.9);
 }
 
 .particle:nth-of-type(47) {
-  animation-delay: 0.27986s;
+  animation-delay: 0.39403s;
   left: calc((100% - 5em) * 0.92);
 }
 
 .particle:nth-of-type(48) {
-  animation-delay: 0.05961s;
+  animation-delay: 0.81362s;
   left: calc((100% - 5em) * 0.94);
 }
 
 .particle:nth-of-type(49) {
-  animation-delay: 0.89877s;
+  animation-delay: 0.12431s;
   left: calc((100% - 5em) * 0.96);
 }
 
 .particle:nth-of-type(50) {
-  animation-delay: 0.74331s;
+  animation-delay: 0.31892s;
   left: calc((100% - 5em) * 0.98);
 }
 
