--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -116,12 +116,13 @@ $selectedByEnemyGlow:rgba(238, 65, 53, 1);
 [data-glow="legendaryGlow"]{
     @include makeGlow('goldenrod', goldenrod, goldenrod, goldenrod, goldenrod)
 }
-[data-glow="recruitGlow"],[data-glow="claimColor"],[data-glow="newSpewWhite"]{
+[data-glow="recruitGlow"],[data-glow="claimColor"],[data-glow="newSpewWhite"],[data-glow="graspingDead"]{
     @include makeGlow('white', rgb(245, 245, 245), rgb(194, 197, 194), rgb(243, 243, 243), rgb(238, 250, 231))
 }
 [data-glow="straitPaths"], [data-glow="straitPaths1"], [data-glow="straitPaths2"], [data-glow="straitPaths3"], [data-glow="straitPaths4"], [data-glow="straitPaths5"], [data-glow="straitPaths6"]{
     @include makeGlow('white', rgb(239, 255, 95), rgb(166, 255, 166), rgb(255, 252, 45), rgb(152, 241, 101))
 }
+[data-glow="deathMove"]{ @include makeGlow('black',rgb(29, 28, 28) ,rgb(36, 32, 32) ,rgb(49, 6, 6) ,rgb(41, 39, 39) )}
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -155,8 +156,11 @@ $selectedByEnemyGlow:rgba(238, 65, 53, 1);
   .resurrecting{
       animation: reverse 1s deathGrip;
   }
-  .illKillYouAll, .outflank{
+  .illKillYouAll, .outflank, .marchGuardBlack, .marchGuardWhite{
     filter: invert(18%) saturate(141);
+  }
+  .mournblade_raisins{
+    filter: drop-shadow(0 0 2vh rgb(72, 255, 0)) grayscale(53%)!important;
   }
 
 
